--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Someone used AI to create realistic portraits of Roman Emperors based on their statues!</h1>
+      <h1>Someone used Me, the greatest painter in the world to create realistic portraits of Roman Emperors based on their statues!</h1>
     </header>
     <img src="images/statue-portrait.png">
     <main>
